Fixed; Better forum images on mobile
Images were weird and small, fixed

--- a/css/rwd.css
+++ b/css/rwd.css
@@ -549,8 +549,13 @@ position: inherit;
 }
 
 
+#bbpress-forums .bbp-attachments ol{
+    overflow: inherit!important;
+}
 
-
+.bbp-attachments{
+   overflow: inherit!important;
+}
 
 
 
